[UPDATE] ColorName:2級和名を追加

--- a/ColorName.css
+++ b/ColorName.css
@@ -244,3 +244,94 @@ main {
 #ebitya .item-color {
     background-color: #693C34;
 }
+#bengara .item-color {
+    background-color: #863E33;
+}
+#ouni .item-color {
+    background-color: #EB6940;
+}
+#hiwada .item-color {
+    background-color: #865C4B;
+}
+#taisya .item-color {
+    background-color: #B26235;
+}
+/* Yellow type */
+#kouzi .item-color {
+    background-color: #FAA55C;
+}
+#kohaku .item-color {
+    background-color: #AA7A40;
+}
+#kutiba .item-color {
+    background-color: #847461;
+}
+#ukon .item-color {
+    background-color: #EDAE00;
+}
+#kariyasu .item-color {
+    background-color: #EAD56B;
+}
+#kihada .item-color {
+    background-color: #D6C949;
+}
+#miru .item-color {
+    background-color: #716B4A;
+}
+#hiwa .item-color {
+    background-color: #C2BD3D;
+}
+/* Green type */
+#tokiwa .item-color {
+    background-color: #007B50;
+}
+#rokusyou .item-color {
+    background-color: #4D8169;
+}
+#tetu .item-color {
+    background-color: #24433E;
+}
+#sinbasi .item-color {
+    background-color: #53A8B7;
+}
+#nando .item-color {
+    background-color: #00687C;
+}
+#kamenozoki .item-color {
+    background-color: #7EB1C1;
+}
+#hanada .item-color {
+    background-color: #2B618F;
+}
+/* Purple type */
+#huzi .item-color {
+    background-color: #A294C8;
+}
+#edomurasaki .item-color {
+    background-color: #614876;
+}
+#kodaimurasaki .item-color {
+    background-color: #765276;
+}
+/* Achromatic type */
+#ginnezu .item-color {
+    background-color: #9C9C9C;
+}
+#tyanezumi .item-color {
+    background-color: #998D86;
+}
+#rikyuunezumi .item-color {
+    background-color: #6E7972;
+}
+#susutake .item-color {
+    background-color: #5D5245;
+}
+
+/* English
+---------------------------------------------------- */
+/* Red type */
+/* Yellow type */
+/* Green type */
+/* Blue type */
+/* Purple type */
+/* Achromatic type */
