--- a/ColorName.css
+++ b/ColorName.css
@@ -3,6 +3,10 @@
 main {
     margin: 0 1rem;
 }
+h2 {
+    text-align: center;
+    margin-top: 2rem;
+}
 .item-color {
     width: 100px;
     height: 100px;
@@ -11,6 +15,59 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+
+
+/* checkbox
+---------------------------------- */
+.checkboxes {
+    margin: 1rem auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+input[type="checkbox"] { display: none; }
+  
+input[type="checkbox"] + label {
+    display: block;
+    position: relative;
+    padding-left: 2rem;
+    font: 14px/20px 'Open Sans', Arial, sans-serif;
+    cursor: pointer;
+}
+  
+input[type="checkbox"] + label:last-child { margin-bottom: 0; }
+  
+input[type="checkbox"] + label:before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: .6;
+    -webkit-transition: all .12s, border-color .08s;
+    transition: all .12s, border-color .08s;
+}
+  
+input[type="checkbox"]:checked + label:before {
+    width: 10px;
+    top: -5px;
+    left: 5px;
+    border-radius: 0;
+    opacity: 1;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.invisible {
+    display: none;
+}
+
 
 /* Japanese
 --------------------------------------------- */
@@ -95,7 +152,7 @@ main {
     background-color: #C94093;
 }
 
-/* English
+/* Foreign
 ---------------------------------------------------- */
 /* Red type */
 #winered .item-color {
@@ -228,10 +285,6 @@ main {
 #toki .item-color {
     background-color: #FA9CB8;
 }
-/*
-#toki {
-    display: none;
-} */
 #karakurenai .item-color {
     background-color: #E64B6B;
 }
@@ -327,7 +380,7 @@ main {
     background-color: #5D5245;
 }
 
-/* English
+/* Foreign
 ---------------------------------------------------- */
 /* Red type */
 #rosepink .item-color {
