--- a/ColorName.css
+++ b/ColorName.css
@@ -7,15 +7,35 @@ h2 {
     text-align: center;
     margin-top: 2rem;
 }
-.item-color {
-    width: 100px;
-    height: 100px;
-}
 .container {
     display: grid;
+    gap: 2rem 1rem;
     grid-template-columns: 1fr 1fr;
+    text-align: center;
 }
-
+.item {
+    border-radius: .5rem;
+    box-shadow: 0 0 7px rgb(196, 196, 196);
+}
+.item-color {
+    width: 130px;
+    height: 120px;
+    margin: 1rem auto;
+}
+.mansell {
+    margin: 0 .75rem .55rem;
+    text-align: right;
+    padding: .25rem .5rem 0 0;
+    font-size: .8rem;
+    border-top: 1px solid rgb(196, 196, 196);
+}
+.item-name {
+    font-weight: bold;
+}
+.item-ruby {
+    font-size: .8rem;
+    margin: .25rem 0 1rem;
+}
 
 
 /* checkbox
