[UPDATE] change checkbox

--- a/ColorName.css
+++ b/ColorName.css
@@ -58,25 +58,21 @@ main {
     justify-content: space-around;
 }
 
-.checkboxes button {
-    width: 96px;
-    height: 40px;
-    border: 1px solid rgb(180, 180, 180);
-    border-radius: 8px;
-    color: rgb(180, 180, 180);
-}
-.checkboxes button.checked {
-    background-color: rgb(83, 83, 83);
-    color: #FFFFFF;
-}
-
 .checkbox {
     width: 96px;
     height: 40px;
     display: flex;
-  justify-content: center;  /* 横方向の中央 */
-  align-items: center; 
-  border: 1px solid black;
+    justify-content: center;  /* 横方向の中央 */
+    align-items: center; 
+    border: 1px solid #000;
+    background-color: #666;
+    color: #FFF;
+    border-radius: 8px;
+}
+.unchecked {
+    background-color: #FFF;
+    color: #888;
+    border: 1px solid #888;
 }
 
 input[type="checkbox"] { display: none; }
@@ -94,12 +90,12 @@ input[type="checkbox"] + label:last-child { margin-bottom: 0; }
 input[type="checkbox"] + label:before {
     content: '';
     display: block;
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #888;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 2px;
     opacity: .6;
     -webkit-transition: all .12s, border-color .08s;
     transition: all .12s, border-color .08s;
@@ -107,9 +103,10 @@ input[type="checkbox"] + label:before {
   
 input[type="checkbox"]:checked + label:before {
     width: 10px;
-    top: -5px;
+    top: -2px;
     left: 5px;
     border-radius: 0;
+    border: 2px solid #FFF;
     opacity: 1;
     border-top-color: transparent;
     border-left-color: transparent;
