--- a/ColorName.css
+++ b/ColorName.css
@@ -10,7 +10,9 @@ h2 {
 .subtitle {
     text-align: left;
     font-size: 1.5rem;
-    margin: 3rem 1rem 1rem;
+    margin: 4rem .5rem 1.5rem;
+    padding-left: .5rem;
+    border-left: 5px solid #666;
 }
 .container {
     display: grid;
