--- a/menuButton.css
+++ b/menuButton.css
@@ -12,7 +12,7 @@ html {
     width: 2.5rem;
     border-radius: 2.5rem;
     padding: 5px;
-
+    cursor: pointer;
     background-color: white;
 }
 
@@ -29,6 +29,7 @@ html {
     flex-direction: column;
     justify-content: center;
     z-index: 100;
+    cursor: pointer;
 }
 #menu-button div {
     height: 2.5px;
