--- a/menuButton.css
+++ b/menuButton.css
@@ -22,8 +22,7 @@ html {
     right: .5rem;
     height: 2.5rem;
     width: 2.5rem;
-    background-color: aliceblue;
-    border: #444 1px solid;
+    background-color: #FFF;
     border-radius: 2.5rem;
     display: flex;
     flex-direction: column;
@@ -57,7 +56,8 @@ html {
     left: 20%;
 }
 
-
+/* navigation
+----------------------------------------- */
 
 #nav-container {
     position: fixed;
