--- a/ColorName.css
+++ b/ColorName.css
@@ -44,6 +44,38 @@ h2 {
     font-size: .8rem;
     margin: .25rem 0 1rem;
 }
+.systematic {
+    margin: 1.5rem .75rem .55rem;
+    text-align: right;
+    padding: .25rem .5rem 0 0;
+    font-size: .8rem;
+    border-top: 1px solid rgb(196, 196, 196);
+}
+.item-description {
+    font-size: .8rem;
+    margin: .75rem 3rem 1rem
+}
+
+table {
+    border-collapse: collapse; 
+    width: 600px;
+}
+table, th, td {
+    border: 1px solid #000;
+}
+thead th {
+    text-align: center;
+}
+tbody td:first-child {
+    text-align: left;
+    padding-left: .5rem;
+}
+tbody .inconsistent {
+    color: rgb(255, 140, 0);
+}
+tbody td:not(:first-child) {
+    text-align: center;
+}
 
 .description {
     margin: 0 1rem 2rem;
